--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,11 @@
 name: ServerNaptime
 version: '${project.version}'
-main: com.gvk.servernaptime.ServerNaptimeMain
+main: com.github.gvk.servernaptime.ServerNaptimeMain
 api-version: 1.18
 prefix: Server Naptime
 authors: [ gvk, RT5Phantom ]
 description: Server takes a nap while no players are online
-website: https://github.com/RT5Phantom/ServerNaptime
+website: https://github.com/gvk/MinecraftPluginServerHibernate
 
 commands:
   naptime:
